--- a/jobSelect/confirm.html
+++ b/jobSelect/confirm.html
@@ -6,26 +6,8 @@
     <title>確認画面</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-size: 2rem; /* 基本のフォントサイズを大きく */
-        }
-
-        h1 {
-            font-size: 3rem; /* タイトルのフォントを大きく */
-        }
-
-        p, button {
-            font-size: 1.8rem; /* ボタンと段落のフォントサイズ */
-        }
-
-        img {
-            width: 250px;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-    </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./CSS/confirm.css">
     <script>
         // URLパラメータから選択された職業名と画像のパスを取得
         function getQueryParam(param) {
