--- a/jobSelect/jobSelect.html
+++ b/jobSelect/jobSelect.html
@@ -6,90 +6,8 @@
     <title>職業選択</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* 職業カードの設定 */
-        .job {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            min-height: 350px;
-            justify-content: space-evenly;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        /* 画像サイズを統一して調整 */
-        .job img {
-            width: auto;
-            height: auto;
-            max-height: 160px;
-            object-fit: cover;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
-
-        /* 職業名のスタイル */
-        .job-title {
-            font-size: 1.8rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        /* ボタンの余白調整 */
-        .job button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            font-size: 1.5rem;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        /* ボタンのホバーエフェクト */
-        .job button:hover {
-            background-color: #45a049;
-        }
-
-        /* スマホ向け調整 */
-        @media (max-width: 768px) {
-            .job {
-                min-height: 300px;
-            }
-
-            .job img {
-                max-height: 120px;
-            }
-
-            .job-title {
-                font-size: 1rem;
-            }
-        }
-
-        /* 前の画面に戻るボタン */
-        .back-button {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 1000;
-            padding: 10px 15px;
-            background-color: #007bff;
-            color: white;
-            font-size: 1rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        /* 戻るボタンホバー */
-        .back-button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./CSS/jobSelect.css">
     <script>
         function confirmSelection(jobName, imgSrc) {
             window.location.href = `confirm.html?job=${encodeURIComponent(jobName)}&img=${encodeURIComponent(imgSrc)}`;
