--- a/jobSelect/success.html
+++ b/jobSelect/success.html
@@ -6,26 +6,8 @@
     <title>選択完了</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-size: 1.25rem; /* 基本のフォントサイズを大きく */
-        }
-
-        h1 {
-            font-size: 2rem; /* タイトルのフォントサイズを大きく */
-        }
-
-        p {
-            font-size: 1.5rem; /* 職業名のフォントサイズを大きく */
-        }
-
-        img {
-            width: 250px;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-    </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./CSS/success.css">
     <script>
         // URLパラメータから選択された職業名と画像のパスを取得
         function getQueryParam(param) {
