--- a/jobSelect/jobSelect.html
+++ b/jobSelect/jobSelect.html
@@ -8,15 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./CSS/jobSelect.css">
-    <script>
-        function confirmSelection(jobName, imgSrc) {
-            window.location.href = `confirm.html?job=${encodeURIComponent(jobName)}&img=${encodeURIComponent(imgSrc)}`;
-        }
-
-        function goBack() {
-            window.history.back();
-        }
-    </script>
+    <!-- Custom JavaScript -->
+    <script src="./JS/jobSelect.js" defer></script>
 </head>
 <body class="container my-5">
     <!-- 前の画面に戻るボタン -->
@@ -43,14 +36,14 @@
             <div class="card job">
                 <img src="./jobsImages/専門大学生.jpg" alt="専門大生" class="card-img-top mx-auto d-block">
                 <p class="job-title">専門大生</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('専門大生', './jobsImages/専門大生.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('専門大生', './jobsImages/専門大学生.jpg')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
                 <img src="./jobsImages/社会人.jpg" alt="社会人" class="card-img-top mx-auto d-block">
                 <p class="job-title">会社員</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('社会人', './jobsImages/社会人.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('社会人', './jobsImages/社会人.jpg')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
