--- a/jobSelect/success.html
+++ b/jobSelect/success.html
@@ -8,20 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./CSS/success.css">
-    <script>
-        // URLパラメータから選択された職業名と画像のパスを取得
-        function getQueryParam(param) {
-            const params = new URLSearchParams(window.location.search);
-            return params.get(param);
-        }
-
-        window.onload = function() {
-            const jobName = getQueryParam('job');
-            const imgSrc = getQueryParam('img');
-            document.getElementById('job-name').textContent = jobName;
-            document.getElementById('job-image').src = imgSrc;
-        };
-    </script>
+    <!-- Custom JavaScript -->
+    <script src="./JS/success.js" defer></script>
 </head>
 <body class="container text-center my-5">
 
