職業選択画面 画像変更

--- a/jobSelect/jobSelect.html
+++ b/jobSelect/jobSelect.html
@@ -34,9 +34,9 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/専門大学生.jpg" alt="専門大生" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/専門大学生.png" alt="専門大生" class="card-img-top mx-auto d-block">
                 <p class="job-title">専門大生</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('専門大生', './jobsImages/専門大学生.jpg')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('専門大生', './jobsImages/専門大学生.png')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
