職業選択完了画面に次の画面に進むボタンを追加・画像の名前を変更

--- a/jobSelect/jobSelect.html
+++ b/jobSelect/jobSelect.html
@@ -13,58 +13,60 @@
 </head>
 <body class="container my-5">
     <!-- 前の画面に戻るボタン -->
-    <button class="back-button" onclick="goBack()">前の画面に戻る</button>
+    <div>
+        <button class="back-button" onclick="goBack()">戻る</button>
+    </div>
 
     <h1 class="text-center mb-5">職業選択画面</h1>
 
     <div class="row g-4">
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/小学生.png" alt="小学生" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/ElementarySchoolStudent.png" alt="小学生" class="card-img-top mx-auto d-block">
                 <p class="job-title">小学生</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('小学生', './jobsImages/小学生.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('小学生', './jobsImages/ElementarySchoolStudent.png')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/中高生.png" alt="中高生" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/JuniorHighAndHighSchoolStudents.png" alt="中高生" class="card-img-top mx-auto d-block">
                 <p class="job-title">中高生</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('中高生', './jobsImages/中高生.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('中高生', './jobsImages/JuniorHighAndHighSchoolStudents.png')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/専門大学生.png" alt="専門大生" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/VocationalUniversityStudent.png" alt="専門大生" class="card-img-top mx-auto d-block">
                 <p class="job-title">専門大生</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('専門大生', './jobsImages/専門大学生.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('専門大生', './jobsImages/VocationalUniversityStudent.png')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/社会人.jpg" alt="社会人" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/CompanyEmployee.jpg" alt="社会人" class="card-img-top mx-auto d-block">
                 <p class="job-title">会社員</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('社会人', './jobsImages/社会人.jpg')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('社会人', './jobsImages/CompanyEmployee.jpg')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/専業主婦・主夫.png" alt="専業主婦・主夫" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/HousewifeOrHousehusband.png" alt="専業主婦・主夫" class="card-img-top mx-auto d-block">
                 <p class="job-title">主婦・主夫</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('専業主婦・主夫', './jobsImages/専業主婦・主夫.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('専業主婦・主夫', './jobsImages/HousewifeOrHousehusband.png')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/配信者.png" alt="配信者" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/VideoContributor.png" alt="配信者" class="card-img-top mx-auto d-block">
                 <p class="job-title">配信者</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('配信者', './jobsImages/配信者.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('配信者', './jobsImages/VideoContributor.png')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
-                <img src="./jobsImages/老後.png" alt="老後" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/OldAge.png" alt="老後" class="card-img-top mx-auto d-block">
                 <p class="job-title">老後</p>
-                <button class="btn btn-success w-100" onclick="confirmSelection('老後', './jobsImages/老後.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('老後', './jobsImages/OldAge.png')">選択</button>
             </div>
         </div>
     </div>
