--- a/jobSelect/confirm.html
+++ b/jobSelect/confirm.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="jobSelect/css/confirm.css">
+    <link rel="stylesheet" href="./css/confirm.css">
     <!-- Custom JavaScript -->
     <script src="./JS/confirm.js" defer></script>
 </head>
