--- a/jobSelect/success.html
+++ b/jobSelect/success.html
@@ -17,6 +17,11 @@
     <p id="job-name" class="fw-bold">職業</p>
     <img id="job-image" src="#" alt="職業画像" class="mb-4">
 
+    <!-- ボタンを画像の下に配置 -->
+    <div class="mt-4">
+        <button id="next-button" class="btn btn-primary">次の画面に進む</button>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
