--- a/jobSelect/success.html
+++ b/jobSelect/success.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>選択完了</title>
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSSの読み込み（スタイルを簡単に適用） -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
+    <!-- カスタムCSSファイルの読み込み -->
     <link rel="stylesheet" href="./CSS/success.css">
-    <!-- Custom JavaScript -->
+    <!-- カスタムJavaScriptファイルの読み込み（deferでHTML読み込み後に実行） -->
     <script src="./JS/success.js" defer></script>
 </head>
 <body class="container text-center my-5">
 
+    <!-- ページのタイトル -->
     <h1>選択が完了しました</h1>
+
+    <!-- 選択した職業名を表示する場所（初期値は「職業」） -->
     <p id="job-name" class="fw-bold">職業</p>
+
+    <!-- 選択した職業画像を表示する場所（初期状態では画像が表示されない） -->
     <img id="job-image" src="#" alt="職業画像" class="mb-4">
 
-    <!-- ボタンを画像の下に配置 -->
+    <!-- 次の画面に進むボタン（ボタンが画像の下に配置される） -->
     <div class="mt-4">
+        <!-- 次の画面に進むボタンをクリックしたときの処理 -->
         <button id="next-button" class="btn btn-primary">次の画面に進む</button>
     </div>
 
-    <!-- Bootstrap JS -->
+    <!-- BootstrapのJavaScriptを読み込む（ボタンの動作など） -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
