職業選択画面 画像と表示の変更

--- a/jobSelect/jobSelect.html
+++ b/jobSelect/jobSelect.html
@@ -26,11 +26,11 @@
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
                 <!-- 小学生の画像 -->
-                <img src="./jobsImages/ElementarySchoolStudent.png" alt="小学生" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/ElementarySchoolStudent.svg" alt="小学生" class="card-img-top mx-auto d-block">
                 <!-- 小学生のタイトル -->
                 <p class="job-title">小学生</p>
                 <!-- 小学生選択ボタン -->
-                <button class="btn btn-success w-100" onclick="confirmSelection('小学生', './jobsImages/ElementarySchoolStudent.png')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('小学生', './jobsImages/ElementarySchoolStudent.svg')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
