職業選択画面　全ての職業で画像を置き換え、表示の仕方も変更。

--- a/jobSelect/jobSelect.html
+++ b/jobSelect/jobSelect.html
@@ -56,11 +56,11 @@
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card job">
                 <!-- 社会人の画像 -->
-                <img src="./jobsImages/CompanyEmployee.jpg" alt="社会人" class="card-img-top mx-auto d-block">
+                <img src="./jobsImages/CompanyEmployee.png" alt="社会人" class="card-img-top mx-auto d-block">
                 <!-- 社会人のタイトル -->
                 <p class="job-title">会社員</p>
                 <!-- 社会人選択ボタン -->
-                <button class="btn btn-success w-100" onclick="confirmSelection('社会人', './jobsImages/CompanyEmployee.jpg')">選択</button>
+                <button class="btn btn-success w-100" onclick="confirmSelection('社会人', './jobsImages/CompanyEmployee.png')">選択</button>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
