--- a/jobSelect/confirm.html
+++ b/jobSelect/confirm.html
@@ -15,10 +15,10 @@
 </head>
 <body class="container text-center my-5">
     <!-- ページタイトル -->
-    <h1>選択を確認</h1>
+    <h1>職業確認画面</h1>
 
     <!-- 選択された職業名を表示する要素 -->
-    <p id="job-name" class="fw-bold">職業</p>
+    <p id="job-name" class="fw-bold">あなたが選んだ職業は</p>
 
     <!-- 選択された職業の画像を表示する要素 -->
     <img id="job-image" src="#" alt="職業画像" class="mb-4">
