職業選択画面 文字サイズを変更

--- a/jobSelect/confirm.html
+++ b/jobSelect/confirm.html
@@ -18,7 +18,7 @@
     <h1>職業確認画面</h1>
 
     <!-- 選択された職業名を表示する要素 -->
-    <p id="job-name" class="fw-bold">あなたが選んだ職業は</p>
+    <h2 id="job-name" class="fw-bold">あなたが選んだ職業は</h2>
 
     <!-- 選択された職業の画像を表示する要素 -->
     <img id="job-image" src="#" alt="職業画像" class="mb-4">
