職業選択画面 ボタンの色を変更

--- a/jobSelect/confirm.html
+++ b/jobSelect/confirm.html
@@ -29,9 +29,9 @@
     <!-- はい・いいえボタン -->
     <div class="buttons">
         <!-- 選択を確定するボタン -->
-        <button class="btn btn-success me-2" onclick="confirmYes()">はい</button>
+        <button onclick="confirmYes()">はい</button>
         <!-- 前の画面に戻るボタン -->
-        <button class="btn btn-danger" onclick="confirmNo()">いいえ</button>
+        <button onclick="confirmNo()">いいえ</button>
     </div>
 
     <!-- BootstrapのJavaScriptを読み込む -->
