職業選択画面　背景色追加

--- a/jobSelect/success.html
+++ b/jobSelect/success.html
@@ -17,7 +17,7 @@
     <h1>選択が完了しました</h1>
 
     <!-- 選択した職業名を表示する場所（初期値は「職業」） -->
-    <p id="job-name" class="fw-bold">職業</p>
+    <h2 id="job-name" class="fw-bold">職業</h2>
 
     <!-- 選択した職業画像を表示する場所（初期状態では画像が表示されない） -->
     <img id="job-image" src="#" alt="職業画像" class="mb-4">
