--- a/案１/人生ゲームスタート画面A案 btn1.html
+++ b/案１/人生ゲームスタート画面A案 btn1.html
@@ -20,7 +20,7 @@
 <img class="img8"src="image/clerk.png" >  <!--レジ-->
 
 
- <button type=“button” class="button10">ゲームスタート！</button>
+ <button type=“button” class="button10" onclick="location.href='URL'">ゲームスタート！</button>
 	
 </body>
 </html>
