indexをルート階層に移動

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div>情報リテラシー人生ゲーム</div>
-    <a href="./jobSelect.html">スタート</a>
+    <a href="./jobSelect/jobSelect.html">スタート</a>
 </body>
 
 </html>
