indexの遷移先URLを変更

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div>情報リテラシー人生ゲーム</div>
-    <a href="./jobSelect/jobSelect.html">スタート</a>
+    <a href="./GameMain_code/game_page.html">スタート</a>
 </body>
 
 </html>
