--- a/jobSelect/jobSelect.html
+++ b/jobSelect/jobSelect.html
@@ -7,9 +7,9 @@
     <!-- Bootstrap CSSの読み込み -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- カスタムCSSファイルの読み込み -->
-    <link rel="stylesheet" href="/CPC_Literacy_ToolCSS/jobSelect.css">
+    <link rel="stylesheet" href="./CSS/jobSelect.css">
     <!-- カスタムJavaScriptファイルの読み込み（deferでHTML読み込み後に実行） -->
-    <script src="/CPC_Literacy_Tool/JS/jobSelect.js" defer></script>
+    <script src="./JS/jobSelect.js" defer></script>
 </head>
 <body class="container my-5">
     <!-- 戻るボタン：前の画面に戻るためのボタン -->
