スタート画面 画像の配置を変更

--- a/案２/人生ゲームスタート画面A案 btn2.html
+++ b/案２/人生ゲームスタート画面A案 btn2.html
@@ -7,17 +7,26 @@
 	<link rel="stylesheet" href="CSS専用A案 btn2.css" >
 </head>
 <body>
-	<h1  class="title">職業別ITリテラシー診断</h1>
-	<img class="img1"src="image/programer.png">		<!--プログラマー-->
-	<img class="img2"src="image/haisinnsha.png">	<!--配信者-->
-	<img class="img3"src="image/hairdresser.png">	<!--美容師-->
-
-	<img class="img4"src="image/farmer.png">			<!--農家-->
-	<img class="img5"src="image/lower.png">				<!--弁護士-->
-	<img class="img6"src="image/carpenter.png">		<!--大工-->
-	<img class="img7"src="image/police.png">			<!--警察-->
-	<img class="img8"src="image/clerk.png">				<!--レジ-->
-
-	<button type=“button” class="button10" onclick="location.href='../jobSelect/jobSelect.html'">ゲームスタート！</button>
+	<h1 class="title">職業別ITリテラシー診断</h1>
+	<div class="images">
+			<div class="left">
+					<img class="img1" src="image/programer.png" alt="プログラマー">
+					<img class="img3" src="image/hairdresser.png" alt="美容師">
+			</div>
+			<div class="right">
+					<img class="img5" src="image/lower.png" alt="弁護士">
+					<img class="img7" src="image/police.png" alt="警察">
+			</div>
+			<div class="left">
+					<img class="img2" src="image/haisinnsha.png" alt="配信者">
+					<img class="img4" src="image/farmer.png" alt="農家">
+			</div>
+			<div class="right">
+					<img class="img6" src="image/carpenter.png" alt="大工">
+					<img class="img8" src="image/clerk.png" alt="レジ">
+			</div>
+	</div>
+	<button type="button" class="button10" onclick="location.href='../jobSelect/jobSelect.html'">ゲームスタート！</button>
 </body>
+
 </html>
